PB-99 Simple UI that hooks up to the real Heroku back end and displays the username of the person who just chatted to the bot

--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -1,5 +1,5 @@
 
-<div *ngIf="messageObservable | async as message; else loading">
-  {{message.projectName}}
+<div *ngIf="messageObservable | async as attendee; else loading">
+  {{attendee.user}}
 </div>
-<ng-template #loading>No projects</ng-template>
+<ng-template #loading>Nothing</ng-template>
